--- a/Dangal.html
+++ b/Dangal.html
@@ -111,6 +111,7 @@
 
     </style> 
     <body>
+        <!--Try Nepali Cuisine-->
         <h1> Nepali Cuisine </h1>
         <h2> Spicy and Delicious Food! </h2> 
         <h3>Have you every tried Nepalese or Indian food?</h3> 
